src/styles/components/_cta-grid.scss
.cta-grid {
  background-color: $azure;

  &__content {
    @include respond((
      padding: (40px percentage(15/320)) null (56px percentage(155px/$bp-xl) 100px),
    ));
  }


  &__heading {
    @include font(roboto-condensed-bold);
    @include respond((
      display: table,
      margin: auto,
      padding: null null (0 8px),
      font-size: 36px,
      line-height: 38px null 58px,
      background-color: $black,
      color: $azure,
    ));
    text-align: center;
  }

  &__subheading {
    max-width: 560px;
    margin-left: auto;
    margin-right: auto;
    @include font(roboto);
    @include respond((
      font-size: 14px null 24px,
      line-height: 20px null 36px,
      color: $black,
      margin-top: 22px null 40px,
      text-align: center,
    ));
  }


  &__grid {
    @include respond((
      display: flex,
      flex-direction: column,
      align-items: center,
      margin-top: 33px null 50px,
    ));
  }


  &__item {
    display: block;
    width: 100%;
    @include breakpoint(md down) {
      &:not(:first-child) {
        margin-top: 20px,
      }
    }

    @include breakpoint(lg) {
      &:nth-child(1) {
        width: 355px;
        margin-left: 0;
        margin-right: auto;
      }
      &:nth-child(2) {
        width: 464px;
      }
      &:nth-child(3) {
        width: 378px;
        margin-right: 0;
        margin-left: auto;
      }
    }
  }


  &__text {
    overflow: hidden;
    @include respond((
      font-size: 60px null 86px,
      line-height: 1,
      color: $black,
      margin-top: 20px null 0,
      text-transform: uppercase,
      text-align: left,
      letter-spacing: -1px null normal,
    ));

    span {
      @include font(roboto-condensed-bold);
    }
  }
}

